bug fix on first customer deposit
